--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<meta http-equiv="refresh" content="0; URL="http://www.jubileecottages.co.uk" />
+<meta http-equiv="refresh" content="0; URL="https://jubileecottages.co.uk/" />
 </HEAD>
 <BODY><H2>404 - Page not found.. redirecting to homepage.</H2></BODY>
 </HTML>
